# F.I.C.C.T.-Proyecto-Final-Sw2-Web

./: .env.example  .gitignore  .pre-commit-config.yaml  GCP_VM_DEV.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  schema.sql
backend/alembic/: env.py
backend/alembic/versions/: 073ed4d23a33_init_vacia.py  83b6c2b1a08c_sp1_agregar_descripcion_proyecto.py  a1b2c3d4e5f6_sp2_planos.py  a4b5c6d7e8f9_baseline_observado_por_banda.py  a5b6c7d8e9f0_gobernanza_escenarios_ia.py  b1c2d3e4f5a6_sp1_enum_estado_proyecto.py  b6c7d8e9f0a1_gobernanza_conjuntos_ap.py  b8c9d0e1f2a3_sp4_aps_interes_heatmap.py  c3d4e5f6a7b8_sp3_mediciones.py  c7d8e9f0a1b2_token_enlace_cliente.py  c9d0e1f2a3b4_sp4_conjuntos_ap.py  d0e1f2a3b4c5_sp4_posiciones_conjunto_ap.py  d4e5f6a7b8c9_crear_tabla_usuario.py  d5e6f7a8b9c0_sp3_numero_lectura_medicion.py  d8e9f0a1b2c3_dispositivos_push_fcm.py  e1f2a3b4c5d6_sp5_escenarios_e_ia.py  e2f3a4b5c6d7_sp5_reportes.py  e5f6a7b8c9d0_sp1_ultimo_acceso_refresh_token_proyecto.py  e6f7a8b9c0d1_sp4_heatmap_y_analisis.py  f3a4b5c6d7e8_rf_ap_fisico_radios_y_proyecciones.py  f6a7b8c9d0e1_sp1_cliente_y_proyecto_fk.py  f7a8b9c0d1e2_sp4_heatmap_por_ap.py
backend/app/: main.py
backend/app/core/: config.py  (+2 more)
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_auth.py  test_clientes.py  test_escenarios_reportes.py  test_health.py  test_heatmaps.py  test_mediciones.py  test_notificaciones.py  test_optimizacion_rf.py  test_planos.py  test_proyectos.py  test_share.py  test_usuarios.py
(+162 files in other folders)
